--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -7,6 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:c4f="clr-namespace:Coding4Fun.Toolkit.Controls.Converters;assembly=Coding4Fun.Toolkit.Controls"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
     FontFamily="Segoe WP Bold"
     FontSize="28"
@@ -26,8 +27,82 @@
             </toolkit:NavigationInTransition.Forward>
         </toolkit:NavigationInTransition>
     </toolkit:TransitionService.NavigationInTransition>
+    
+    <phone:PhoneApplicationPage.Resources>
+        <c4f:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <Style x:Key="ListBoxItemStyle" TargetType="ListBoxItem">
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
+            <Setter Property="Padding" Value="0"/>
+            <Setter Property="HorizontalContentAlignment" Value="Left"/>
+            <Setter Property="VerticalContentAlignment" Value="Top"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ListBoxItem">
+                        <Border x:Name="LayoutRoot" BorderBrush="{TemplateBinding BorderBrush}" 
+                                BorderThickness="{TemplateBinding BorderThickness}" 
+                                Background="{TemplateBinding Background}" 
+                                HorizontalAlignment="{TemplateBinding HorizontalAlignment}" 
+                                VerticalAlignment="{TemplateBinding VerticalAlignment}">
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="CommonStates">
+                                    <VisualState x:Name="Normal"/>
+                                    <VisualState x:Name="MouseOver"/>
+                                    <VisualState x:Name="Disabled">
+                                        <Storyboard>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" 
+                                                                           Storyboard.TargetName="LayoutRoot">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource TransparentBrush}"/>
+                                            </ObjectAnimationUsingKeyFrames>
+                                            <DoubleAnimation Duration="0" To=".5" Storyboard.TargetProperty="Opacity" 
+                                                             Storyboard.TargetName="ContentContainer"/>
+                                        </Storyboard>
+                                    </VisualState>
+                                </VisualStateGroup>
+                                <VisualStateGroup x:Name="SelectionStates">
+                                    <VisualState x:Name="Unselected"/>
+                                    <VisualState x:Name="Selected">
+                                        <Storyboard>
+                                            <ObjectAnimationUsingKeyFrames
+                                                    Storyboard.TargetName="ContentContainer"
+                                                    Storyboard.TargetProperty="Foreground"
+                                                    Duration="0">
+                                                <DiscreteObjectKeyFrame  KeyTime="0">
+                                                    <DiscreteObjectKeyFrame.Value>
+                                                        <SolidColorBrush Color="White"/>
+                                                    </DiscreteObjectKeyFrame.Value>
+                                                </DiscreteObjectKeyFrame>
+                                            </ObjectAnimationUsingKeyFrames>
+                                            <ObjectAnimationUsingKeyFrames
+                                                    Storyboard.TargetName="border"
+                                                    Storyboard.TargetProperty="Background"
+                                                    Duration="0">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneChromeBrush}" />
+                                            </ObjectAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </VisualState>
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+                            <StackPanel x:Name="border" Orientation="Horizontal">
+                                <ContentControl x:Name="ContentContainer" ContentTemplate="{TemplateBinding ContentTemplate}" 
+                                                Content="{TemplateBinding Content}" Foreground="{TemplateBinding Foreground}" 
+                                                HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                                                Margin="{TemplateBinding Padding}" 
+                                                VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                            </StackPanel>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </phone:PhoneApplicationPage.Resources>
 
     <Grid x:Name="LayoutRoot">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
         <Grid.Background>
             <LinearGradientBrush StartPoint="0,0" EndPoint="0,1" >
                 <GradientStop Offset=".15" Color="{Binding Source={StaticResource PhoneChromeBrush}, Path=Color}" />
@@ -38,22 +113,57 @@
             <Image Source="/Images/cloudsdale-thin-bright-logo.png" />
         </Grid>
 
-        <Grid x:Name="ContentPanel" Margin="12,150,12,0" Visibility="Collapsed">
-            <TextBox InputScope="EmailNameOrAddress" Name="UserBox" VerticalAlignment="Top" 
-                     Margin="40,120,0,0" />
-            <PasswordBox Name="PassBox" VerticalAlignment="Top" Margin="40,210,0,0" />
-            <TextBlock Text="Email" FontSize="36" Margin="0,80,0,0" Height="50" 
-                       VerticalAlignment="Top" />
-            <TextBlock Text="Password" FontSize="36" Margin="0,175,0,0" Height="50" 
-                       VerticalAlignment="Top" />
-            <Button x:Name="emailbtn" VerticalAlignment="Bottom" Margin="2,0,220,250"
-                    Height="75" Content="Login" Click="LoginClick" />
-            <Button x:Name="createbtn" VerticalAlignment="Bottom" Margin="220,0,2,250"
-                    Height="75" Content="Create Account" Click="CreateClick" />
-            <Button x:Name="fbbtn" VerticalAlignment="Bottom" Margin="2,0,2,120" Height="75" 
-                    Content="Login with Facebook" Click="FacebookClick"/>
-            <Button x:Name="twitterbtn" IsEnabled="False" VerticalAlignment="Bottom" 
-                    Margin="2,0,2,45" Height="75" Content="Login with Twitter" Click="TwitterClick"/>
+        <Grid x:Name="ContentPanel" Margin="12,50,12,0" Visibility="Collapsed" Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+
+            <TextBlock FontSize="36" Grid.Row="0">Email</TextBlock>
+            <TextBox Name="UserBox" InputScope="EmailNameOrAddress" BorderBrush="#888888" Grid.Row="1"
+                     TextChanged="UserBoxTextChanged" Text="administration@connorcpu.net" />
+
+            <TextBlock FontSize="36" Grid.Row="2">Password</TextBlock>
+            <PasswordBox Name="PassBox" BorderBrush="#888888" Grid.Row="3"
+                         PasswordChanged="PassBoxPasswordChanged" Password="12ltfromwil1"/>
+
+            <Grid Grid.Row="4">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Button Name="emailbtn" Click="LoginClick" Grid.Column="0">Login</Button>
+                <Button Name="createbtn" Click="CreateClick" Grid.Column="1">Register</Button>
+            </Grid>
+
+            <Border Grid.Row="5" Background="Transparent" BorderBrush="#888888" BorderThickness="3" Margin="10">
+                <ListBox Name="AccountsBox" SelectionChanged="AccountsBoxSelectionChanged" 
+                         ItemContainerStyle="{StaticResource ListBoxItemStyle}" SelectionMode="Single">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <toolkit:ContextMenuService.ContextMenu>
+                                    <toolkit:ContextMenu>
+                                        <toolkit:MenuItem Header="Forget" Click="ForgetClick" />
+                                    </toolkit:ContextMenu>
+                                </toolkit:ContextMenuService.ContextMenu>
+                                <Image Grid.Column="0" Source="{Binding Path=avatar.Thumb}" Height="50" Margin="5" />
+                                <TextBlock VerticalAlignment="Center" Grid.Column="1" Foreground="#3a3a3a">
+                                    <Run Text="{Binding Path=name}" />
+                                </TextBlock>
+                            </Grid>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ListBox>
+            </Border>
         </Grid>
     </Grid>
 
