--- a/Avatars/MLFWConfirm.xaml
+++ b/Avatars/MLFWConfirm.xaml
@@ -7,7 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
-    FontFamily="Segoe WP Bold"
+    FontFamily="Segoe WP"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="#3a3a3a"
     SupportedOrientations="Portrait" Orientation="Portrait"
