--- a/Clouds.xaml
+++ b/Clouds.xaml
@@ -10,13 +10,13 @@
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     xmlns:my="clr-namespace:Cloudsdale.Controls" xmlns:Models="clr-namespace:Cloudsdale.Models" mc:Ignorable="d" 
     d:DesignWidth="480" d:DesignHeight="696"
-    FontFamily="Segoe WP Bold"
+    FontFamily="Segoe WP"
     FontSize="28"
     Foreground="Black"
     Background="#FFF0F0F0"
     SupportedOrientations="PortraitOrLandscape"  Orientation="Portrait"
     shell:SystemTray.IsVisible="True" OrientationChanged="PhoneApplicationPageOrientationChanged"
-    shell:SystemTray.Opacity="0" shell:SystemTray.ForegroundColor="#FF1A91DB" shell:SystemTray.BackgroundColor="Black">
+    shell:SystemTray.Opacity="1" shell:SystemTray.ForegroundColor="#FF1A91DB" shell:SystemTray.BackgroundColor="Black">
 
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
@@ -187,7 +187,7 @@
                         Margin="0,10,0,0" Foreground="{StaticResource PhoneChromeBrush}">
             <controls:Pivot.HeaderTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding}" FontFamily="Segoe WP Bold" FontSize="48" 
+                    <TextBlock Text="{Binding}" FontFamily="Segoe WP" FontSize="48" 
                                Foreground="{StaticResource PhoneChromeBrush}"/>
                 </DataTemplate>
             </controls:Pivot.HeaderTemplate>
