That's all I had to do? -_-

--- a/Controls/CloudTileManager.xaml
+++ b/Controls/CloudTileManager.xaml
@@ -40,7 +40,7 @@
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <ScrollViewer x:Name="Scroller">
+    <ScrollViewer x:Name="Scroller" ManipulationMode="Control">
         <Grid x:Name="LayoutRoot" VerticalAlignment="Top">
             <Canvas x:Name="TileCanvas">
 
