--- a/Clouds.xaml
+++ b/Clouds.xaml
@@ -21,20 +21,20 @@
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
             <toolkit:NavigationInTransition.Backward>
-                <toolkit:TurnstileTransition Mode="BackwardIn"/>
+                <toolkit:SlideTransition Mode="SlideLeftFadeIn" />
             </toolkit:NavigationInTransition.Backward>
             <toolkit:NavigationInTransition.Forward>
-                <toolkit:TurnstileTransition Mode="ForwardIn"/>
+                <toolkit:SlideTransition Mode="SlideRightFadeIn" />
             </toolkit:NavigationInTransition.Forward>
         </toolkit:NavigationInTransition>
     </toolkit:TransitionService.NavigationInTransition>
     <toolkit:TransitionService.NavigationOutTransition>
         <toolkit:NavigationOutTransition>
             <toolkit:NavigationOutTransition.Backward>
-                <toolkit:TurnstileTransition Mode="BackwardOut"/>
+                <toolkit:SlideTransition Mode="SlideLeftFadeOut" />
             </toolkit:NavigationOutTransition.Backward>
             <toolkit:NavigationOutTransition.Forward>
-                <toolkit:TurnstileTransition Mode="ForwardOut"/>
+                <toolkit:SlideTransition Mode="SlideRightFadeOut" />
             </toolkit:NavigationOutTransition.Forward>
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
@@ -275,7 +275,7 @@
                                         <TextBlock Text="{Binding Path=SuspendedReason}" FontSize="18" 
                                                    Width="430" TextWrapping="Wrap" />
                                     </StackPanel>
-                                    <Button Click="AddOnSkype" Visibility="{Binding Path=skype_name, Converter={StaticResource BoolToVis}}">Add on Skype</Button>
+                                    <Button Click="AddOnSkype" Visibility="{Binding Path=skype_name, Converter={StaticResource SEBV}}">Add on Skype</Button>
                                     <StackPanel Visibility="{Binding Path=AKA, Converter={StaticResource AHAV}}">
                                         <TextBlock FontSize="32" Foreground="#FF888888">Also Known As</TextBlock>
                                         <ItemsControl ItemsSource="{Binding Path=AKA}" FontSize="16" />
