--- a/EditCloud.xaml
+++ b/EditCloud.xaml
@@ -18,31 +18,25 @@
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
             <toolkit:NavigationInTransition.Backward>
-                <toolkit:SlideTransition Mode="SlideLeftFadeIn" />
+                <toolkit:SlideTransition Mode="SlideRightFadeIn" />
             </toolkit:NavigationInTransition.Backward>
             <toolkit:NavigationInTransition.Forward>
-                <toolkit:SlideTransition Mode="SlideRightFadeIn" />
+                <toolkit:SlideTransition Mode="SlideLeftFadeIn" />
             </toolkit:NavigationInTransition.Forward>
         </toolkit:NavigationInTransition>
     </toolkit:TransitionService.NavigationInTransition>
     <toolkit:TransitionService.NavigationOutTransition>
         <toolkit:NavigationOutTransition>
             <toolkit:NavigationOutTransition.Backward>
-                <toolkit:SlideTransition Mode="SlideLeftFadeOut" />
+                <toolkit:SlideTransition Mode="SlideRightFadeOut" />
             </toolkit:NavigationOutTransition.Backward>
             <toolkit:NavigationOutTransition.Forward>
-                <toolkit:SlideTransition Mode="SlideRightFadeOut" />
+                <toolkit:SlideTransition Mode="SlideLeftFadeOut" />
             </toolkit:NavigationOutTransition.Forward>
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
 
-    <Grid x:Name="LayoutRoot">
-        <Grid.Background>
-            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1" >
-                <GradientStop Offset=".1425" Color="#FF1A91DB" />
-                <GradientStop Offset=".1425" Color="#FFF0F0F0" />
-            </LinearGradientBrush>
-        </Grid.Background>
+    <Grid x:Name="LayoutRoot" Background="{StaticResource PortraitBackground}">
         <StackPanel VerticalAlignment="Top" Margin="0">
             <TextBlock Foreground="White" FontSize="44" Margin="5,0">Edit</TextBlock>
             <TextBlock Text="{Binding Path=name}" Foreground="White" FontSize="40" Width="450" Margin="10,0,0,0" />
